--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build --outDir=docs",
     "lint": "eslint .",
     "deploy": "gh-pages -d dist",
     "preview": "vite preview"
