--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://aaryanbhardwaj1.github.io/justBalance",
+  "homepage": "https://just-balance.us",
   "private": true,
   "version": "0.0.0",
   "type": "module",
